# cricore-contract-compiler

./: CHANGELOG.md  README.md  pyproject.toml
schema/: policy.schema.json
src/compiler/: cli.py  compile_policy.py  compile_policy_file.py  contract_hash.py  load_policy.py  write_compiled_contract.py
tests/compiler/: test_compile_policy_file.py  test_contract_hash_deterministic.py  test_contract_writer.py  test_policy_compiler.py  test_policy_loader.py
tests/fixtures/policies/invalid/: bad-contract-version.invalid.json  extra-top-level-field.invalid.json
tests/fixtures/policies/valid/: approval-threshold.valid.json  minimal.valid.json
tests/schema/: test_policy_schema_validation.py
