[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricore-contract-compiler"
version = "0.2.1"
description = "Deterministic compiler for governance policies into CRI-CORE contract artifacts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

authors = [
    { name = "Waveframe Labs", email = "swright@waveframelabs.org" }
]

keywords = [
    "governance",
    "policy compiler",
    "ai governance",
    "compliance",
    "contracts"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "jsonschema>=4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jsonschema>=4"
]

[project.urls]
Homepage = "https://waveframelabs.org"
Source = "https://github.com/Waveframe-Labs/cricore-contract-compiler"
Issues = "https://github.com/Waveframe-Labs/cricore-contract-compiler/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
cricore-compile-policy = "compiler.cli:main"
